[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/board/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/gui/buttons/return.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/buttons/exitLeft.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/buttons/gear.png" type="Texture" id=4]
[ext_resource path="res://src/game/Game.gd" type="Script" id=5]
[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=6]
[ext_resource path="res://src/menus/AudioSettings.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/gui/buttons/home.png" type="Texture" id=8]
[ext_resource path="res://assets/gui/letter.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Complete:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Complete:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 640, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "Victory"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("Complete:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 640, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[node name="Game" type="Control"]
theme = ExtResource( 6 )
script = ExtResource( 5 )

[node name="GameView" type="VBoxContainer" parent="."]
margin_right = 360.0
margin_bottom = 640.0
custom_constants/separation = 0

[node name="Commands" type="Panel" parent="GameView"]
margin_right = 360.0
margin_bottom = 120.0
rect_min_size = Vector2( 360, 120 )

[node name="Back" type="TextureButton" parent="GameView/Commands"]
margin_left = 20.0
margin_right = 80.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Restart" type="TextureButton" parent="GameView/Commands"]
margin_left = 150.0
margin_right = 210.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="Settings" type="TextureButton" parent="GameView/Commands"]
margin_left = 280.0
margin_right = 340.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="Title" type="Label" parent="GameView/Commands"]
margin_top = 40.0
margin_right = 360.0
margin_bottom = 120.0
align = 1
valign = 2
autowrap = true
clip_text = true

[node name="BoardView" type="NinePatchRect" parent="GameView"]
margin_top = 120.0
margin_right = 360.0
margin_bottom = 480.0
rect_min_size = Vector2( 360, 360 )
texture = ExtResource( 9 )
region_rect = Rect2( 20, 20, 220, 220 )
patch_margin_left = 10
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Board" parent="GameView/BoardView" instance=ExtResource( 1 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 340.0
margin_bottom = 340.0

[node name="ColorRect" type="ColorRect" parent="GameView/BoardView"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.392157 )

[node name="Label" type="Label" parent="GameView/BoardView/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Tap to Start"
align = 1
valign = 1

[node name="Status" type="Panel" parent="GameView"]
margin_top = 480.0
margin_right = 360.0
margin_bottom = 640.0
rect_min_size = Vector2( 360, 160 )

[node name="Clock" type="VBoxContainer" parent="GameView/Status"]
margin_left = 20.0
margin_top = 10.0
margin_right = 100.0
margin_bottom = 94.0
rect_min_size = Vector2( 80, 80 )

[node name="ClockText" type="Label" parent="GameView/Status/Clock"]
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 20 )
text = "Time"
align = 1
valign = 1

[node name="Clock" type="Label" parent="GameView/Status/Clock"]
margin_top = 34.0
margin_right = 80.0
margin_bottom = 64.0
rect_min_size = Vector2( 40, 20 )
text = "00:00"
align = 1
valign = 1

[node name="Solvers" type="VBoxContainer" parent="GameView/Status"]
margin_left = 120.0
margin_top = 10.0
margin_right = 240.0
margin_bottom = 94.0
rect_min_size = Vector2( 80, 80 )

[node name="SolveText" type="Label" parent="GameView/Status/Solvers"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 20 )
text = "Solvers"
align = 1
valign = 1

[node name="SolveValue" type="Label" parent="GameView/Status/Solvers"]
margin_top = 34.0
margin_right = 120.0
margin_bottom = 64.0
rect_min_size = Vector2( 40, 20 )
text = "0"
align = 1
valign = 1

[node name="Moves" type="VBoxContainer" parent="GameView/Status"]
margin_left = 260.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 94.0
rect_min_size = Vector2( 80, 80 )

[node name="MoveText" type="Label" parent="GameView/Status/Moves"]
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 20 )
text = "Moves"
align = 1
valign = 1

[node name="MoveValue" type="Label" parent="GameView/Status/Moves"]
margin_top = 34.0
margin_right = 80.0
margin_bottom = 64.0
rect_min_size = Vector2( 40, 20 )
text = "0"
align = 1
valign = 1

[node name="InstantSolve" type="Button" parent="GameView/Status"]
margin_left = 80.0
margin_top = 90.0
margin_right = 280.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 60 )
text = "Instant Solve"

[node name="AudioSettings" type="Panel" parent="."]
visible = false
margin_right = 280.0
margin_bottom = 120.0

[node name="AudioSettings" parent="AudioSettings" instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -42.0
margin_right = 122.0
margin_bottom = 42.0

[node name="Complete" type="Panel" parent="."]
margin_top = 640.0
margin_right = 360.0
margin_bottom = 1280.0

[node name="CompleteView" type="VBoxContainer" parent="Complete"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_right = 160.0

[node name="Success" type="Label" parent="Complete/CompleteView"]
margin_right = 320.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
text = "success!"
align = 1
valign = 1
uppercase = true

[node name="Title" type="Label" parent="Complete/CompleteView"]
margin_top = 84.0
margin_right = 320.0
margin_bottom = 164.0
rect_min_size = Vector2( 320, 80 )
align = 1
valign = 2
autowrap = true

[node name="Picture" type="TextureRect" parent="Complete/CompleteView"]
margin_top = 168.0
margin_right = 320.0
margin_bottom = 488.0
rect_min_size = Vector2( 320, 320 )
expand = true

[node name="Stats" type="HBoxContainer" parent="Complete/CompleteView"]
margin_top = 492.0
margin_right = 320.0
margin_bottom = 624.0
custom_constants/separation = 0
alignment = 1

[node name="Time" type="VBoxContainer" parent="Complete/CompleteView/Stats"]
margin_left = 10.0
margin_right = 110.0
margin_bottom = 132.0

[node name="TimeText" type="Label" parent="Complete/CompleteView/Stats/Time"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "Time"
align = 1

[node name="TimeValue" type="Label" parent="Complete/CompleteView/Stats/Time"]
margin_top = 34.0
margin_right = 100.0
margin_bottom = 64.0
text = "00:00"
align = 1

[node name="BestText" type="Label" parent="Complete/CompleteView/Stats/Time"]
margin_top = 68.0
margin_right = 100.0
margin_bottom = 98.0
rect_min_size = Vector2( 100, 0 )
text = "Best Time"
align = 1

[node name="BestValue" type="Label" parent="Complete/CompleteView/Stats/Time"]
margin_top = 102.0
margin_right = 100.0
margin_bottom = 132.0
text = "--:--"
align = 1

[node name="Move" type="VBoxContainer" parent="Complete/CompleteView/Stats"]
margin_left = 110.0
margin_right = 210.0
margin_bottom = 132.0

[node name="MoveText" type="Label" parent="Complete/CompleteView/Stats/Move"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "Moves"
align = 1

[node name="MoveValue" type="Label" parent="Complete/CompleteView/Stats/Move"]
margin_top = 34.0
margin_right = 100.0
margin_bottom = 64.0
text = "0"
align = 1

[node name="BestMove" type="Label" parent="Complete/CompleteView/Stats/Move"]
margin_top = 68.0
margin_right = 100.0
margin_bottom = 98.0
rect_min_size = Vector2( 100, 0 )
text = "Best Moves"
align = 1

[node name="BestValue" type="Label" parent="Complete/CompleteView/Stats/Move"]
margin_top = 102.0
margin_right = 100.0
margin_bottom = 132.0
text = "-"
align = 1

[node name="Coins" type="VBoxContainer" parent="Complete/CompleteView/Stats"]
margin_left = 210.0
margin_right = 310.0
margin_bottom = 132.0

[node name="MoveText" type="Label" parent="Complete/CompleteView/Stats/Coins"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
text = "Coins Won"
align = 1

[node name="CoinValue" type="Label" parent="Complete/CompleteView/Stats/Coins"]
margin_top = 34.0
margin_right = 100.0
margin_bottom = 64.0
text = "0"
align = 1

[node name="BestMove" type="Label" parent="Complete/CompleteView/Stats/Coins"]
margin_top = 68.0
margin_right = 100.0
margin_bottom = 98.0
rect_min_size = Vector2( 100, 0 )
align = 1

[node name="BestValue" type="Label" parent="Complete/CompleteView/Stats/Coins"]
margin_top = 102.0
margin_right = 100.0
margin_bottom = 132.0
align = 1

[node name="CompleteOptions" type="HBoxContainer" parent="Complete"]
margin_top = 560.0
margin_right = 360.0
margin_bottom = 640.0
custom_constants/separation = 200
alignment = 1

[node name="Replay" type="TextureButton" parent="Complete/CompleteOptions"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="OK" type="TextureButton" parent="Complete/CompleteOptions"]
margin_left = 280.0
margin_right = 360.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 8 )
expand = true

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Victory = SubResource( 2 )

[connection signal="pressed" from="GameView/Commands/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="GameView/Commands/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GameView/Commands/Settings" to="." method="_on_Settings_pressed"]
[connection signal="game_started" from="GameView/BoardView/Board" to="." method="_on_Board_game_started"]
[connection signal="game_won" from="GameView/BoardView/Board" to="." method="_on_Board_game_won"]
[connection signal="moves_updated" from="GameView/BoardView/Board" to="." method="_on_Board_moves_updated"]
[connection signal="pressed" from="GameView/Status/InstantSolve" to="." method="_on_InstantSolve_pressed"]
[connection signal="pressed" from="Complete/CompleteOptions/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="Complete/CompleteOptions/OK" to="." method="_on_OK_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
